refactor(content-locators): replace allBboxes with contentLocators in BookBlock
- Renamed `allBboxes` to `contentLocators` in the OpenAPI schema and related classes to better reflect their purpose.
- Introduced `ContentLocator` as a base type for both `EpubLocator` and `PdfLocator`, enhancing the structure and clarity of content location handling.
- Updated the `BookBlock` class and its methods to utilize the new `contentLocators` structure, ensuring consistency across the application.
- Adjusted tests and fixtures to accommodate the changes, verifying the correct functionality of content locators in various scenarios.